fix: basemap z-index and position

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -151,7 +151,7 @@ body {
     padding: 0 16px;
     font-size:18px;
     a{
-      color: $dark-green;
+      color: $darkgreen;
     }
   }
 }
@@ -431,10 +431,11 @@ nav {
 
 // BASEMAP
 #basemap {
-  z-index: 0 !important;
+  z-index: -9 !important;
   position: fixed;
-  height: calc(100vh - 50px);
+  height: 100vh;
   width: 100%;
+  top:0;
   //.leaflet-map-pane
 }
 
